# megazeux

./: .editorconfig  .gitattributes  .gitignore  .valgrindrc  BUILDING.md  CHANGELOG  COPYING  GUS.MSE  LICENSE  LICENSE.3rd  MZX270w_Bugs.txt  MZXBLANK.FIL  MZX_CMOD.FIL  Makefile  Makefile.config  Makefile.in  Makefile.linux  Makefile.platform  PAS.MSE  READ.txt  README.1ST  README.S1  README.TXT  README.md  SB16.MSE  SB1X.MSE  SB2X.MSE  SBPRO.MSE  WHATSNEW.251  admath.cpp  admath.h  arrowkey.asm  arrowkey.h  arrowkey.inc  audio.cpp  audio.h  beep.cpp  beep.h  blink.cpp  blink.h  (+201 more)
android/: local.properties
arch/: LICENSE.3rd  LICENSE.DJGPP  LICENSE.Newlib  Makefile.amiga  Makefile.darwin  Makefile.dist  Makefile.gp2x  Makefile.linux  Makefile.linux-static  Makefile.macos  Makefile.mingw  Makefile.mingw32  Makefile.mingw64  Makefile.nds  Makefile.obsd  Makefile.psp  Makefile.solaris  Makefile.win32  README  compat.inc  defaults.inc  install.inc  lha.inc  manifest.sh  zip.inc
arch/psvita/: CMakeLists.txt  CONFIG.PSVITA  Makefile.in  README.md  config.h  linked_list.c  linked_list.h  pad.config.sdl12  vita_debug.c  vita_debug.h  vitaio.c  vitaio.h
arch/psvita/sce_sys/livearea/contents/: template.xml
assets/: edit.chr  gamecontrollerdb.LICENSE  gamecontrollerdb.txt  help.fil  mzvplay.txt  smzx.chr  smzx2.chr
contrib/: 2.83-revert-glsl-config.txt  README.1ST  SDL-directx-SetDataFormat-fix.diff  SDL-directx-system-keys-fix.diff  libmodplug-0.7-2-channel-fix.diff  libmodplug-0.7-amd64-fixes.diff  libmodplug-0.7-clip-fix.diff  libmodplug-0.7-increase-frequency-upper-limit.diff  libmodplug-0.8-fix-looping.diff  libmodplug-0.8-mingw-include-fixes.diff  libmodplug-0.8.4-amigaos-hacks.diff  libmodplug-0.8.4-constify-strings.diff  libmodplug-0.8.4-define-strnicmp-only-when-necessary.diff  libmodplug-0.8.4-fix-X86_Convert32To24.diff  libmodplug-0.8.4-fix-looping.diff  libmodplug-0.8.4-fix-spurious-warnings.diff  libmodplug-0.8.4-mingw-x64-NULL-hack.diff  libmodplug-0.8.4-remove-unused-loaders.diff  libmodplug-0.8.4-restore-mingw-support.diff  libmodplug-0.8.4-restore-msvc-2005-support.diff  libmodplug-0.8.7-amigaos-hacks.diff  libmodplug-0.8.7-fix-X86_Convert32To24.diff  libmodplug-0.8.7-fix-duplicate-strnicmp-definition.diff  libmodplug-0.8.7-fix-looping.diff  libmodplug-0.8.7-fix-type-punning-warnings.diff  libmodplug-0.8.7-if0-dead-code-make-globals-static.diff  libmodplug-0.8.7-misc-warning-fixes.diff  libmodplug-0.8.7-msvc-2010-warning-fixes.diff  libmodplug-0.8.7-remove-unused-defines.diff  libmodplug-0.8.7-remove-unused-loaders.diff  libmodplug-0.8.7-restore-msvc-support.diff  libmodplug.txt  megazeux-r326-replace-c99-variable-arrays-with-malloc-free.diff  ogg-wav-loop-markers-2.83.diff  remove-malloc-free-casts.diff
debian/: README  binary.lintian-overrides  changelog  control  copyright  docs  megazeux.manpages  rules
docs/: SDLkeys.txt  STYLE.md  WIPHelp.txt  betatest.txt  build.txt  changelog.txt  convmem.txt  counter_list.txt  cycles_and_commands.txt  exotic.txt  exotic_translations.txt  filef200.txt  fileform.html  fileform.txt  fix.doc  gp2x.txt  help.doc  idle_direction_oddities.txt  info_mzx.txt  joystick.html  keycodes.html  macro.txt  megazeux.1  megazeux.doc  multiplayer_support.txt  mzm.txt  mzx_requests.txt  mzx_todo.txt  mzxhelp.html  platform_matrix.html  port.txt  psp.txt  push_and_transport.txt
scripts/: PKGBUILD.template  build-rev.sh  build.sh  com.digitalmzx.MegaZeux.yml  flatpak-build.sh  psp.sh  wii.sh  windows-x64.sh  windows-x86.sh
shaders/: cursor.frag  cursor.vert  mouse.frag  mouse.vert  nearest.frag  scaler.frag  scaler.vert  simple.frag  simple.vert  tilemap.frag  tilemap.smzx12.frag  tilemap.smzx3.frag  tilemap.vert
src/: Makefile  Makefile.in  SDLmzx.h  about.c  about.h  audio.c  audio.cpp  audio.h  audio_mikmod.c  audio_mikmod.h  audio_modplug.cpp  audio_modplug.h  audio_openmpt.c  audio_openmpt.h  audio_pcs.c  audio_pcs.h  audio_sdl.c  audio_vorbis.c  audio_wav.c  audio_wii.c  audio_xmp.c  audio_xmp.h  block.c  block.cpp  block.h  board.c  board.cpp  board.h  board_struct.h  caption.c  caption.h  char_ed.c  char_ed.cpp  char_ed.h  charset.h  compat.h  compat_sdl.h  config.h  configure.c  configure.cpp  (+256 more)
testworlds/: 2.51 #00000 Swap Test.mzx  2.51 #00002 Shoot No-Cycle.mzx  2.51 #00003 Endgame Teleport.mzx  2.51 #00004 Entrances.mzx  2.60 #00001 SEND Lock.txt  2.65 #00001 IF ANY.mzx  2.69c #00001 vlayer.mzx  2.80 #00001 IF ANY.mzx  2.80 #00002 Copy Restart.mzx  2.80 #00003 Go Stack.mzx  2.80 #00006 BOARD_COLOR Bleed.mzx  2.80 #00008 set counter str.mzx  2.80d #00001 Char ID 255.mzx  2.81 #00001 VLAYER_SIZE.mzx  2.90 #00004 GOOP_WALK.mzx  2.90 #00006 Asset Entry.mzx  2.90 #00008 Board ext chars.mzx  2.90d #00000 Nested Ternary.mzx  2.91 #00001 Copy Block Splice.mzx  2.91 #00002 Wildcards.mzx  2.91 #00004 MOD_LENGTH.mzx  2.91 #00005 String Valid.mzx  2.91 #00006 String Neg Off.mzx  2.91 #00007 String Idx Enh.mzx  2.91c #00002 st_load.mzx  (+16 more)
(+1246 files in other folders)
